Bug 38028 - [4.4 Regression] eh failures on spu-elf
Summary: [4.4 Regression] eh failures on spu-elf
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.4.0
: P4 normal
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords: wrong-code
Depends on:
Blocks:
 
Reported: 2008-11-05 20:28 UTC by Andrew Pinski
Modified: 2009-03-12 14:02 UTC (History)
1 user (show)

See Also:
Host:
Target: spu-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2008-11-05 20:28:33 UTC
Between revision 141329 and 141589, we are getting some eh failures on spu-elf:

+FAIL: g++.dg/compat/eh/ctor1 cp_compat_x_tst.o-cp_compat_y_tst.o execute 
+FAIL: g++.dg/compat/eh/ctor2 cp_compat_x_tst.o-cp_compat_y_tst.o execute 
+FAIL: g++.dg/compat/eh/new1 cp_compat_x_tst.o-cp_compat_y_tst.o execute 
+FAIL: g++.dg/compat/init/array5 cp_compat_x_tst.o-cp_compat_y_tst.o execute 
+FAIL: g++.dg/eh/ctor1.C execution test
+FAIL: g++.dg/eh/ctor2.C execution test
+FAIL: g++.dg/eh/new1.C execution test
+FAIL: g++.dg/eh/spbp.C execution test
+FAIL: g++.dg/init/array5.C execution test
+FAIL: g++.dg/init/ctor1.C execution test
+FAIL: g++.old-deja/g++.eh/fntry1.C execution test
+FAIL: g++.old-deja/g++.eh/rethrow3.C execution test
+FAIL: g++.old-deja/g++.eh/vbase1.C execution test
+FAIL: g++.old-deja/g++.eh/vbase2.C execution test
+FAIL: g++.old-deja/g++.mike/eh16.C execution test
+FAIL: g++.old-deja/g++.mike/eh17.C execution test
+FAIL: g++.old-deja/g++.mike/eh39.C execution test
+FAIL: g++.old-deja/g++.mike/eh40.C execution test
+FAIL: g++.old-deja/g++.mike/eh41.C execution test
+FAIL: g++.old-deja/g++.other/new7.C execution test
+FAIL: g++.old-deja/g++.other/vbase2.C execution test

But the eh tests for Objective-C work ...
Comment 1 Ulrich Weigand 2009-03-07 16:02:50 UTC
Subject: Bug 38028

Author: uweigand
Date: Sat Mar  7 16:02:30 2009
New Revision: 144696

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=144696
Log:
	PR middle-end/38028
	* function.c (assign_parm_setup_stack): Use STACK_SLOT_ALIGNMENT to
	determine alignment passed to assign_stack_local.
	(assign_parms_unsplit_complex): Likewise.
	* except.c (sjlj_build_landing_pads): Likewise.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/except.c
    trunk/gcc/function.c

Comment 2 Ulrich Weigand 2009-03-12 14:02:51 UTC
Fixed.