	PR middle-end/38028 	* function.c (assign_parm_setup_stack): Use STACK_SLOT_ALIGNMENT to 	determine alignment passed to assign_stack_local. 	(assign_parms_unsplit_complex): Likewise. 	* except.c (sjlj_build_landing_pads): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144696 138bc75d-0d04-0410-961f-82ee72b054a4